# hierarchical-recognition

./: .bandit  .flake8  .gitignore  .pylintrc  README.md  data_utils.py  evaluate.py  main.py  model.py  pre-commit  pyproject.toml  requirements.txt  train.py  visualize.py
docs/: linting.md
reports/: bandit-report.txt  flake8-report.txt  pylint-report.txt
results/configs/: training_config_20250424-220902.json  training_config_20250424-221156.json  training_config_20250424-222349.json  training_config_20250424-230646.json
results/evaluation/: evaluation_results_20250424-234655.json
results/models/: hierarchical_cnn_20250424-230000_history.json  hierarchical_cnn_20250424-234649_history.json
scripts/: lint.py
scripts/reports/: bandit-report.txt  flake8-report.txt  mypy-report.txt  pylint-report.txt
